tests/Fixtures/views/errors/compile_error_in_include.tpl
<h1>Wrapper</h1>
{include file="errors/compile_error_partial.tpl"}
<p>after</p>
